--- a/portfolio.html
+++ b/portfolio.html
@@ -1,82 +1,246 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Moad's Portfolio</title>
+    <title>Moad Lemrani | Software Engineer</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <!--intro-->
-    <header>
-        <h1>Welcome To My Portfolio</h1><br>
-        <!--bookmarks-->
-        <a href="#intro"><button>Home</button></a>
-        <a href="#about"><button>About Me</button></a>
-        <a href="#skills"><button>Skills</button></a>
-        <a href="#projects"><button>Projects</button></a>
-        <a href="#contact"><button>Contact</button></a>
-        <hr>
-    </header>
-    <section id="intro">
-        <p>Hey there! I'm <strong>Moad Lemrani</strong>, software engineering student with a passion for building things
-            that actually
-            make a difference. I’m always learning, experimenting, and finding new ways to improve my skills. Feel free
-            to explore my work, and let’s connect!</p>
-    </section>
+    <!-- Navigation -->
+    <nav id="navbar">
+        <div class="container nav-container">
+            <a href="#" class="logo">M<span>L</span></a>
+            <button class="mobile-menu-btn" id="mobileMenuBtn">
+                <i class="fas fa-bars"></i>
+            </button>
+            <ul class="nav-links" id="navLinks">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    <!--resume-->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I’m currently a student at <a href="http://ensao.ump.ma/" target="_blank"><abbr
-                    title="École Nationale des Sciences Appliquées d'Oujda"><strong>ENSAO</strong></abbr></a>,
-            specializing in Software Engineering. I love solving problems through
-            code, and I’m always eager to explore new technologies. My goal is to become a skilled developer who can
-            build impactful and helpful applications.</p>
-    </section>
-
-    <!--lkdob-->
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul>
-            <li><strong>Programming:</strong> Java, Python, C++</li>
-            <li><strong>Web Development:</strong> HTML, CSS</li>
-            <li><strong>Database Management:</strong> SQL/PL-SQL</li>
-            <li><strong>Tools & Platforms:</strong> Visual Studio code, Jupyter Notebook, WAMP Server, SQL Developer
-            </li>
-        </ul>
-    </section>
-
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><strong>project 1: </strong></li>
-            <li><strong>project 2: </strong></li>
-            <li><strong>project 3: </strong></li>
-            <li><strong>project 4: </strong></li>
-        </ul>
-    </section>
-
-    <!--tawasol-->
-    <section id="contact">
-        <h2>Contact</h2>
-        <div class="email">
-            <a href="mailto:moadlemran12@gmail.com" target="_blank" title="e-mail me"><input type="submit" value="Send"></a>
-        </div><br>
-        <div class="social">
-            <!--icons-->
-            <a href="https://github.com/MoadLemrani" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-            <a href="https://www.linkedin.com/in/moad-lemrani-a6b141289" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+    <!-- Hero Section -->
+    <section class="hero" id="home">
+        <div class="hero-content">
+            <h1>Moad Lemrani</h1>
+            <p>Software Engineering Student | Problem Solver | Tech Enthusiast</p>
+            <div style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
+                <a href="#contact" class="btn">Get In Touch</a>
+                <a href="#projects" class="btn btn-outline">View My Work</a>
+            </div>
         </div>
     </section>
 
+    <!-- About Section -->
+    <section id="about">
+        <div class="container">
+            <h2>About Me</h2>
+            <div class="about-content">
+                <div class="about-text">
+                    <p>Hello! I'm Moad Lemrani, a passionate software engineering student at <a
+                            href="http://ensao.ump.ma/" target="_blank"><strong>École Nationale des Sciences Appliquées
+                                d'Oujda (ENSAO)</strong></a>. I love solving complex problems through clean, efficient
+                        code and am constantly exploring new technologies to expand my skill set.</p>
+                    <p>My journey in technology began with a curiosity about how digital solutions can make a meaningful
+                        impact. Now, I'm focused on building my expertise across various programming languages and
+                        frameworks to create applications that are not just functional, but also user-friendly and
+                        innovative.</p>
+                    <p>When I'm not coding, you can find me exploring new technologies, contributing to open-source
+                        projects, or mentoring fellow students in programming concepts.</p>
+                </div>
+                <div class="about-image">
+                    <img src="images/me.jpg" alt="Moad Lemrani">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section class="skills-section" id="skills">
+        <div class="container">
+            <h2>My Skills</h2>
+            <div class="skills-container">
+                <div class="skill-card">
+                    <h3><i class="fas fa-code"></i> Programming Languages</h3>
+                    <ul>
+                        <li>Java - Object-oriented programming and application development</li>
+                        <li>Python - Data analysis and application development</li>
+                        <li>C - Low-level programming and memory management</li>
+                        <li>C++ - Object-oriented programming and algorithm implementation</li>
+                        <li>JavaScript - Building interactive web applications</li>
+                        <li>PHP - Web development</li>
+                    </ul>
+                </div>
+                <div class="skill-card">
+                    <h3><i class="fas fa-laptop-code"></i> Web Development</h3>
+                    <ul>
+                        <li>HTML5 - Semantic markup and structure</li>
+                        <li>CSS3 - Responsive design and animations</li>
+                        <li>JavaScript - DOM manipulation and ES6+ features</li>
+                    </ul>
+                </div>
+                <div class="skill-card">
+                    <h3><i class="fas fa-database"></i> Database & Tools</h3>
+                    <ul>
+                        <li>SQL - Database design and query optimization</li>
+                        <li>PL/SQL - Stored procedures and functions</li>
+                        <li>MySQL - Relational database management</li>
+                        <li>SQLite - Relational database management</li>
+                        <li>Git - Version control and collaboration</li>
+                        <li>Github - Code hosting, collaboration, and project management</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects Section -->
+    <section id="projects">
+        <div class="container">
+            <h2>Featured Projects</h2>
+            <div class="projects-container">
+                <div class="project-card">
+                    <div class="project-image" style="background-image: url('images/marks_system.png');"></div>
+                    <div class="project-content">
+                        <h3>School Grades Management System</h3>
+                        <p>Secure web application with user authentication and MySQL database for managing student grades via a responsive interface.</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>PHP</span>
+                            <span>MySQL</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#"><i class="fab fa-github"></i> Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image" style="background-image: url('images/expnses_tracker.png');"></div>
+                    <div class="project-content">
+                        <h3>Personal Budget Manager</h3>
+                        <p>Desktop app with a modern JavaFX interface to track expenses by category, featuring CRUD operations and local file storage.</p>
+                        <div class="project-tech">
+                            <span>Java</span>
+                            <span>JavaFX</span>
+                            <span>CSS</span>
+                            <span>File I/O</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#"><i class="fab fa-github"></i> Code</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image" style="background-image: url('images/portfolio.png');"></div>
+                    <div class="project-content">
+                        <h3>E-commerce Website</h3>
+                        <p>Responsive personal website built with HTML, CSS, and JavaScript to showcase projects and skills.</p>
+                        <div class="project-tech">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="#"><i class="fab fa-github"></i> Code</a>
+                            <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact-section" id="contact">
+        <div class="container">
+            <h2>Get In Touch</h2>
+            <div class="contact-container">
+                <div class="contact-form">
+                    <div id="formAlert" class="form-alert" style="display:none;"></div>
+                    <form id="contactForm" action="https://formsubmit.co/mouadlemrani12@gmail.com" method="POST">
+                        <!-- Disable CAPTCHA (optional) -->
+                        <input type="hidden" name="_captcha" value="false">
+
+                        <!-- Email subject (optional) -->
+                        <input type="hidden" name="_subject" value="New message from your portfolio">
+
+                        <div class="form-group">
+                            <label for="name">Your Name</label>
+                            <input type="text" id="name" name="name" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">Email Address</label>
+                            <input type="email" id="email" name="email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="message">Your Message</label>
+                            <textarea id="message" name="message" required></textarea>
+                        </div>
+                        <button type="submit" class="btn">Send Message</button>
+                    </form>
+                </div>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <div class="contact-item-content">
+                            <h3>Email</h3>
+                            <p>moadlemran12@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <div class="contact-item-content">
+                            <h3>Location</h3>
+                            <p>Oujda, Morocco</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-university"></i>
+                        <div class="contact-item-content">
+                            <h3>Education</h3>
+                            <p>ENSAO - Software Engineering</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Moad Lemrani</p>
+        <div class="container footer-content">
+            <a href="#" class="footer-logo">M<span>L</span></a>
+            <ul class="footer-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <div class="footer-social">
+                <a href="https://github.com/MoadLemrani" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/moad-lemrani-a6b141289" target="_blank"><i
+                        class="fab fa-linkedin-in"></i></a>
+            </div>
+            <p class="copyright">&copy; 2025 Moad Lemrani. All rights reserved.</p>
+        </div>
     </footer>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
