--- a/portfolio.html
+++ b/portfolio.html
@@ -32,14 +32,43 @@
         </div>
     </nav>
 
+    <!--dark mode toggle-->
+    <button id="darkModeToggle" class="theme-toggle">
+        <span class="sun-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                <path
+                    d="M12 2.25a.75.75 0 0 1 .75.75v2.25a.75.75 0 0 1-1.5 0V3a.75.75 0 0 1 .75-.75ZM7.5 12a4.5 4.5 0 1 1 9 0 4.5 4.5 0 0 1-9 0ZM18.894 6.166a.75.75 0 0 0-1.06-1.06l-1.591 1.59a.75.75 0 1 0 1.06 1.061l1.591-1.59ZM21.75 12a.75.75 0 0 1-.75.75h-2.25a.75.75 0 0 1 0-1.5H21a.75.75 0 0 1 .75.75ZM17.834 18.894a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 1 0-1.061 1.06l1.59 1.591ZM12 18a.75.75 0 0 1 .75.75V21a.75.75 0 0 1-1.5 0v-2.25A.75.75 0 0 1 12 18ZM7.758 17.303a.75.75 0 0 0-1.061-1.06l-1.591 1.59a.75.75 0 0 0 1.06 1.061l1.591-1.59ZM6 12a.75.75 0 0 1-.75.75H3a.75.75 0 0 1 0-1.5h2.25A.75.75 0 0 1 6 12ZM6.697 7.757a.75.75 0 0 0 1.06-1.06l-1.59-1.591a.75.75 0 0 0-1.061 1.06l1.59 1.591Z" />
+            </svg>
+        </span>
+        <span class="moon-icon">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                <path fill-rule="evenodd"
+                    d="M9.528 1.718a.75.75 0 0 1 .162.819A8.97 8.97 0 0 0 9 6a9 9 0 0 0 9 9 8.97 8.97 0 0 0 3.463-.69.75.75 0 0 1 .981.98 10.503 10.503 0 0 1-9.694 6.46c-5.799 0-10.5-4.7-10.5-10.5 0-4.368 2.667-8.112 6.46-9.694a.75.75 0 0 1 .818.162Z"
+                    clip-rule="evenodd" />
+            </svg>
+        </span>
+    </button>
+
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
             <h1>Moad Lemrani</h1>
             <p>Software Engineering Student | Problem Solver | Tech Enthusiast</p>
-            <div style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
-                <a href="#contact" class="btn">Get In Touch</a>
-                <a href="#projects" class="btn btn-outline">View My Work</a>
+            <div class="btn-group">
+                <!-- Top row with two buttons -->
+                <div class="top-buttons">
+                    <a href="#contact" class="btn btn-outline">Get In Touch</a>
+                    <a href="#projects" class="btn btn-outline">View My Work</a>
+                </div>
+
+                <!-- Bottom row with download button centered -->
+                <div class="dropdown">
+                    <button class="btn" id="downloadBtn">Download CV ▾</button>
+                    <div class="dropdown-content" id="dropdownMenu" style="display: none;">
+                        <a href="files/CV_fr.pdf" download>Download CV (French)</a>
+                        <a href="files/CV_eng.pdf" download>Download CV (English)</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -116,7 +145,8 @@
                     <div class="project-image" style="background-image: url('images/marks_system.png');"></div>
                     <div class="project-content">
                         <h3>School Grades Management System</h3>
-                        <p>Secure web application with user authentication and MySQL database for managing student grades via a responsive interface.</p>
+                        <p>Secure web application with user authentication and MySQL database for managing student
+                            grades via a responsive interface.</p>
                         <div class="project-tech">
                             <span>HTML</span>
                             <span>CSS</span>
@@ -124,7 +154,8 @@
                             <span>MySQL</span>
                         </div>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://github.com/MoadLemrani/marks_system" target="_blank"><i
+                                    class="fab fa-github"></i> Code</a>
                         </div>
                     </div>
                 </div>
@@ -132,7 +163,8 @@
                     <div class="project-image" style="background-image: url('images/expnses_tracker.png');"></div>
                     <div class="project-content">
                         <h3>Personal Budget Manager</h3>
-                        <p>Desktop app with a modern JavaFX interface to track expenses by category, featuring CRUD operations and local file storage.</p>
+                        <p>Desktop app with a modern JavaFX interface to track expenses by category, featuring CRUD
+                            operations and local file storage.</p>
                         <div class="project-tech">
                             <span>Java</span>
                             <span>JavaFX</span>
@@ -147,22 +179,30 @@
                 <div class="project-card">
                     <div class="project-image" style="background-image: url('images/portfolio.png');"></div>
                     <div class="project-content">
-                        <h3>E-commerce Website</h3>
-                        <p>Responsive personal website built with HTML, CSS, and JavaScript to showcase projects and skills.</p>
+                        <h3>Personal Portfolio Website</h3>
+                        <p>Responsive personal website built with HTML, CSS, and JavaScript to showcase projects and
+                            skills.</p>
                         <div class="project-tech">
                             <span>HTML</span>
                             <span>CSS</span>
                             <span>JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="#"><i class="fab fa-github"></i> Code</a>
-                            <a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://github.com/MoadLemrani/portfolio" target="_blank"><i
+                                    class="fab fa-github"></i> Code</a>
+                            <!--<a href="#"><i class="fas fa-external-link-alt"></i> Live Demo</a>-->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Image Modal -->
+    <div id="imageModal" class="modal">
+        <img class="modal-content" id="modalImage" alt="Expanded project image">
+    </div>
+
 
     <!-- Contact Section -->
     <section class="contact-section" id="contact">
