add expense app link in project

--- a/portfolio.html
+++ b/portfolio.html
@@ -172,7 +172,7 @@
                             <span>File I/O</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/MoadLemrani/expense_tacker_app"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://github.com/MoadLemrani/expense_tacker_app" target="_blank"><i class="fab fa-github"></i> Code</a>
                         </div>
                     </div>
                 </div>
