--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
                 <div class="dropdown">
                     <button class="btn" id="downloadBtn">Download CV ▾</button>
                     <div class="dropdown-content" id="dropdownMenu" style="display: none;">
-                        <a href="files/CV_fr.pdf" download>Download CV (French)</a>
-                        <a href="files/CV_eng.pdf" download>Download CV (English)</a>
+                        <a href="files/LEMRANI_Moad_CV_fr.pdf" download>Download CV (French)</a>
+                        <a href="files/LEMRANI_Moad_CV_eng.pdf" download>Download CV (English)</a>
                     </div>
                 </div>
             </div>
