Cloudflare Web Analytics

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="images/favicon-16x16.png" type="image/png" />
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2737e9b9f2da4f77a98666a6a8fff6b3"}'></script>
+    <!-- End Cloudflare Web Analytics -->
 </head>
 
 <body>
